CHANGELOG FOR ATOMSK
====================


Beta 0.13.1 (12 January 2024)
-----------------------------
- in mode "--create", fixed a bug that prevented generating tetragonal lattices and nanotubes.


Beta 0.13 (22 December 2023)
----------------------------
- new mode "--match-id" allows to sort atoms from a file, so that their IDs match those from another file.
- mode "--difference" now accepts that the two systems have different numbers of atoms. Atoms that exist in first system but not the second are marked with a new auxiliary property "deleted_atom". Also, if atoms change chemical species between the two files, a new auxiliary property "diff_Z" is created.
- in mode "--rdf", when several files are treated, neighbour list is rebuilt only if atom displacements are larger than skin width dR.
- mode "--rdf" now accepts a single file name, if a single file must be analyzed.
- when writing files in Protein Data Base (*.pdb) format, lines starting with SCALE are not written any more to avoid issues when visualising with OVITO. OVITO was also patched to fix this issue, see their Git commit [https://gitlab.com/stuko/ovito/-/commit/2a5f55736f4b6bdce7c18931a7fb30da84bb6320].
- mode "--create" now supports the following lattices: A15, Boron nitride (or B12). Also fixed a performance issue when generating oriented unit cells.
- option "-deform" now allows to apply shear deformation, and to untilt the cell. Option "-shear" becomes obsolete.
- option "-remove-atoms all" will now remove all atoms.
- option "-select" now displays chemical species of selected atoms.
- progress bars can now be customized with a new keyword in configuration file (atomsk.conf).
- computationnally heavy routines (like computation of G tensor or RDF) are separated in new "compute_*.f90" modules to improve maintainability and flexibility. It also means that these routines can now be called by different modes.