@@ -11,7 +11,7 @@ MODULE mode_polycrystal
 !*     Université de Lille, Sciences et Technologies                              *
 !*     UMR CNRS 8207, UMET - C6, F-59655 Villeneuve D'Ascq, France                *
 !*     pierre.hirel@univ-lille.fr                                                 *
-!* Last modification: P. Hirel - 19 Feb. 2024                                     *
+!* Last modification: P. Hirel - 18 March 2024                                    *
 !**********************************************************************************
 !* OUTLINE:                                                                       *
 !* 100        Read atom positions of seed (usually a unit cell) from ucfile       *
@@ -167,7 +167,12 @@ CALL ATOMSK_MSG(4054,(/''/),(/0.d0/))
 !     it might also be larger. Keep that in mind if you modify this routine
 CALL READ_AFF(ucfile,Huc,Puc,Suc,comment,AUXNAMES,AUXuc)
 !
-IF(nerr>0 .OR. .NOT.ALLOCATED(P)) GOTO 1000
+IF(nerr>0 ) GOTO 1000
+IF( .NOT.ALLOCATED(Puc) .OR. SIZE(Puc,1)<1 ) THEN
+  CALL ATOMSK_MSG(804,(/''/),(/0.d0/))
+  nerr=nerr+1
+  GOTO 1000
+ENDIF
 !
 !Check if seed contains shells (in the sense of core-shell model) and/or auxiliary properties
 IF( ALLOCATED(Suc) .AND. SIZE(Suc,1)>0 ) THEN
