@@ -2,6 +2,12 @@ CHANGELOG FOR ATOMSK
 ====================
 
 
+Master
+------
+- fixed a bug in mode "--polycrystal" that stopped the mode just after reading the seed.
+- fixed a bug when writing LAMMPS data files (*.lmp), where the atom "types" were not correctly counted when several types corresponded to the same chemical species. Thanks to Benedikt Eggle-Sievers, Max-Planck-Institut fuer Eisenforschung GmbH, Germany, for pointing out this bug.
+
+
 Beta 0.13.1 (12 January 2024)
 -----------------------------
 - in mode "--create", fixed a bug that prevented generating tetragonal lattices and nanotubes.
